--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -16,12 +17,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20
+      
+      - name: Build project
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         run: |
           npm run build
           mkdir -p out
-          echo "Hello from CI/CD Deployment" > out/index.html
+          echo '<!DOCTYPE html><html><head><title>CI/CD Deployment</title></head><body><h1>Hello from CI/CD Deployment</h1></body></html>' > out/index.html
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
